src/test/deca/syntax/valid/decla_var_2.deca
//Test Syntaxe - Declaration de variables sans initialisation 2
//Resultat: 0 erreur 

{
   int b ;
   int c ;
}