src/test/deca/syntax/invalid/decl_invalid.deca
//Test syntaxiquement incorrecte avec declaration de type seulement 

{
    //int c;
    int; 
    int a;
    //int b;
}